# 42_all_in_one

./: .gitignore  Makefile  README.md  install.ps1  install.sh  pyproject.toml
editors/emacs/: norminette-formatter.el
editors/sublime/: NorminetteFormatter.sublime-commands  norminette-formatter.sublime-settings
editors/vim/: norminette-formatter.vim
editors/vim/lua/: norminette-formatter.lua
editors/vscode/: extension.js  package.json
forty_two_aio/: __init__.py  main.py
forty_two_aio/core/: config.py  file_scanner.py  i18n.py  syntax.py
forty_two_aio/gui/: app.py
forty_two_aio/gui/frames/: compiler_frame.py  dashboard.py  editor_frame.py  exam_mode_frame.py  exams_frame.py  git_frame.py  norm_frame.py  predictor_frame.py  repo_frame.py
forty_two_aio/modules/compiler/: checker.py
forty_two_aio/modules/exams/: database.py
forty_two_aio/modules/git_tools/: git_manager.py
forty_two_aio/modules/github/: repo_checker.py
forty_two_aio/modules/norm/: __init__.py
forty_two_aio/modules/predictor/: grade_predictor.py
forty_two_aio/modules/updater/: updater.py
norminette_formatter/cli/: main.py
norminette_formatter/core/: __init__.py  diagnostics.py  fixer.py  formatter.py  rules.py
norminette_formatter/server/: lsp.py
tests/: test_fixer.py  test_rules.py
